2004-06-07 multipath-tools-0.2.3
	* [multipath] group_by_serial try to be smart with LUN
	  balancing across controlers (for STK / LSI) :
	  1st multipath : 1st pg made of path through 1st controler
	  2nd multipath : 1st pg made of path through 2nd controler
	  3rd multipath : 1st pg made of path through 1st controler
	  ...
	* [multipath] drop .pindex[] in struct multipath in favor
	  of a *paths vector : much cleaner
	* [multipath] fix group_by_serial pgpolicy broken by
	  vectorisation in 0.2.2
	* add a StorageTek array in the sample multipath.conf
	* [multipathd] strcmp fix from <j@pureftpd.org>
	* [multipathd] convert to vector api
	* [multipathd] add a configfile option for path checking
	  interval. See sample configfile for synthax.
2004-06-07 multipath-tools-0.2.2
	* [multipath] leave out 2.4 compat code. Is there
	  interest anyway ?
	* [multipath] convert all_paths table to vector api.
	  Rename to pathvec. Get rid of max_devs
	* [multipath] convert mp table to vector api
	* convert blacklist to vector api
	* 2.6.7-rc? adds _user annotations to scsi/sg.h, causing
	  compilation breakage. Add a "#define _user" in all
	  sg_include.h (and remove cruft)
	* merge a real parser (from keepalived) courtesy of 
	  Alexandre Cassen. Now multipath and multipathd share a
	  config file. This comes with a nice vector lib.
	* devnode blacklist moved from hardcoded to config file
	* Guy Coates noted -O2 CFLAGS lead to multipathd crashes
	  on IA64. Remove the needless optimisation for now.
2004-06-05 multipath-tools-0.2.1
	* [multipath] add a flag to inihibit the final SIGHUP to
	  multipathd. Needed to avoid recursion with the correction
	  below
	* [multipathd] devmap event now triggers a multipath exec
	  in addition to the usual updatepaths()
	* [multipathd] move checkers from sg_io on BLK onto CHR
	  readsector0 goes from read to sg_read
	* [multipathd] rely on sysfs for failedpaths enum and no
	  longer on the device mapper