@@ -1,4 +1,7 @@
-2004-06-07 multipath-tools-0.2.3
+2004-06-20 multipath-tools-0.2.4
+	* [multipathd] break free from system's libsysfs for now
+	  as it is not that common these days
+2004-06-14 multipath-tools-0.2.3
 	* [multipath] group_by_serial try to be smart with LUN
 	  balancing across controlers (for STK / LSI) :
 	  1st multipath : 1st pg made of path through 1st controler
@@ -10,7 +13,7 @@
 	* [multipath] fix group_by_serial pgpolicy broken by
 	  vectorisation in 0.2.2
 	* add a StorageTek array in the sample multipath.conf
-	* [multipathd] strcmp fix from <j@pureftpd.org>
+	* [multipathd] strcmp fix from Franck Denis
 	* [multipathd] convert to vector api
 	* [multipathd] add a configfile option for path checking
 	  interval. See sample configfile for synthax.
